Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • A amd
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,464
    • Issues 1,464
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 0
    • Merge requests 0
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • drm
  • amd
  • Issues
  • #2213
Closed
Open
Issue created Oct 19, 2022 by Shlomo A@shlomo

Screen doesn't turn on when waking from suspend: Failed to pin framebuffer with error -19

After waking from suspend, the screen doesn't turn on.

[   41.169063] amdgpu: Move buffer fallback to memcpy unavailable
[   41.169066] amdgpu 0000:0c:00.0: amdgpu: 00000000ca9de50f pin failed
[   41.169069] [drm:dm_plane_helper_prepare_fb [amdgpu]] *ERROR* Failed to pin framebuffer with error -19

As a workaround, you can switch to a different tty to turn the screen back on.

This started after upgraing Arch linux 5.19.13.arch1-1 -> 6.0.1.arch2-1.

I wasn't able to bisect 5.19.13..6.0 (6.0-rc3 is bad, but earlier version are untestable).

But I could reproduce the same bug using commits earlier than 5.19, and found the bug was fixed by commit 925b6e59138cefa47275c67891c65d48d3266d57 (Revert "drm/amdgpu: add drm buddy support to amdgpu").

I have Vega 10.

Assignee
Assign to
Time tracking